back issue resolved

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.png" />
 
     <!-- google fonts -->
+    <script src="https://unpkg.com/history/umd/history.min.js"></script>
     <script type="text/javascript">
       WebFontConfig = {
         google: { families: [ 'Roboto:100,300,400,400italic,500,700:latin' ] }
